# bevy_alacritty

./: Cargo.toml
assets/shaders/: bg.wgsl
examples/: minimal.rs
src/: lib.rs
