[package]
name = "bevy_alacritty"
version = "0.1.0"
edition = "2021"
license = "MIT-0 OR (Apache-2.0 WITH LLVM-exception)"

[dependencies]
alacritty_terminal = "0.24"
bevy_vector_shapes = "0.8.0"
bytemuck = "1.16"
flume = "0.11"
mio-extras = "2"
owned_ttf_parser = "0.19"

[dependencies.bevy]
version = "0.14"
default-features = false

[dependencies.bevy_msdf]
git = "https://github.com/NexusSocial/bevy_msdf"
rev = "45a1458ac528744f8836c3000fefc712d34e314e"

[dev-dependencies.bevy]
version = "0.14"
features = ["dynamic_linking"]
